Grid rendering (with readme overlay).

--- a/main.css
+++ b/main.css
@@ -1,5 +1,6 @@
 body {
     font-family: sans-serif;
+    /*overflow: hidden;*/
 }
 
 sub {
@@ -19,10 +20,12 @@ p {
     border-radius: 8px;
     box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
     cursor: default;
-    /*display: none;*/
+    display: none;
 }
 
 #help_pane {
+    top: 20px;
+    left: 20px;
     width: 450px;
 }
 
