--- a/main.css
+++ b/main.css
@@ -1,6 +1,6 @@
 body {
     font-family: sans-serif;
-    /*overflow: hidden;*/
+    overflow: hidden;
 }
 
 
@@ -58,51 +58,48 @@ div.movable_pane li {
   Like most of this project, a lot of this code was---if not directly
   lifted---based heavily on work done by someone else (who then
   graciously opened that up for me to pick apart). In this case, it's
-  Soh Tanaka whose tabs I based this work off of.
+  Soh Tanaka.
   http://www.sohtanaka.com/web-design/simple-tabs-w-css-jquery/
 */
-/*First thing to note, this isn't very DRY.
-  In theis first `tab_menu`, we're specifying the hight, but we have
-  to do so again in `tab_menu li`. Also, here is a really important
-  `margin-top. Without it the top *and* bottom borders defined in
-  `tab_menu li` (more accurately the negative `margin-top` needed to
-  compensate) will cause really ugly offsets.*/
 ul.tab_menu {
-    height: 2em;
-    margin-top: 8px;
+    height: 2em; /*Menu tab height*/
+    margin-top: 2px; /*Border Width + whatever else*/
+    margin-left: 8px; /*Border Radius + whatever else*/
 }
-/*Here, note that `line-hight` is identical to the previous `hight`.
-  That's intentional, and _important_.*/
 ul.tab_menu li {
     list-style: none;
     text-indent: 0px;
     padding: 0px;
-    line-height: 2em;
-    float: left;
+    line-height: 2em; /*Menu tab height, again*/
+    float: left; 
     position: relative;
     background-color: #efefef;
-    margin-top: -4px;
+    margin-top: -2px; /*Border width*/
     border-top-left-radius: 8px;
     border-top-right-radius: 8px;
-    border-top: 2px solid #ccc;
-    border-right: 1px solid #ccc;
-    border-bottom: 2px solid #ccc;
-    border-left: 1px solid #ccc;
+    border-top: 2px solid #ccc; /*this + padding-top === Border Width*/
+    border-bottom: 2px solid #ccc; /*Border width*/
+    border-right: 1px solid #ccc; /*Not strictly necessary, but looks better*/
+    border-left: 1px solid #ccc; /*Not strictly necessary, but looks better*/
 }
 ul.tab_menu li:first-child {
-    border-left: 2px solid #ccc;
+    border-left: 2px solid #ccc; /*Accounting for smaller left/right defaults*/
 }
 ul.tab_menu li:last-child {
-    border-right: 2px solid #ccc;
+    border-right: 2px solid #ccc; /*Accounting for smaller left/right defaults*/
 }
-/*Changing the background while the mouse is hovering.*/
+/*Change the background while the mouse is hovering.*/
 ul.tab_menu li:hover {
     background-color: #bbb;
+
 }
+/*Set the backgrond to the color of the container, regardless of mouse
+  position.*/
 ul.tab_menu li.open, ul.tab_menu li.open:hover {
     background-color: #fff;
     border-bottom: 2px solid #fff;
 }
+/*Menu tab Text styling*/
 ul.tab_menu li a {
     display: block;
     text-decoration: none;
@@ -110,14 +107,14 @@ ul.tab_menu li a {
     padding: 0px 20px;
 }
 
+/*Tab container styling*/
 div.tab_container {
+    border: 2px solid #ccc; /* Border Width */
+    border-radius: 8px; /* Border Radius */
     background-color: #fff;
-    border: 2px solid #ccc;
-    margin-top: -2px;
-    border-radius: 8px;
-    border-top-left-radius: 0px;
     padding: .6em;
 }
+/*By default, don't display any of the content text*/
 div.tab_content {
     display: none;
 }
@@ -155,6 +152,7 @@ This should be entirely temporary.
     position: absolute;
     top: 20px; right: 20px;
     width: 300px;
+    display: none;
 }
 /*
 Example interaction with the debug pane:
